# animations

./: Cargo.toml  README.md  da.crds  pyproject.toml
mess/animations/: data.py  gui.py  vis.py
rust/src/: lib.rs
src/: data.py  gui.py  lib.rs  main.rs  vis.py  vis_gui.py  vis_verts.py
src/anim_map_tool/: foo.rs
src/hitboxes_export/: bar.rs
