[package]
name = "messvis"
version = "0.1.0"
edition = "2024"

[dependencies]
dat_tools = { git = "https://github.com/AlexanderHarrison/dat_extractor.git" }
slp_parser = { git = "https://github.com/AlexanderHarrison/slp_parser.git" }
glam = { version = "0.29", features = ["bytemuck"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }

[[bin]]
name = "anim_map"
path = "src/anim_map_tool/foo.rs"

[[bin]]
name = "export"
path = "src/hitboxes_export/bar.rs"