[package]
name = "messvis"
version = "0.1.0"
edition = "2024"

[dependencies]
dat_tools = { git = "https://github.com/AlexanderHarrison/dat_extractor.git" }
slp_parser = { git = "https://github.com/AlexanderHarrison/slp_parser.git" }
glam = { version = "0.29", features = ["bytemuck"] }

[dependencies.pyo3]
version = "0.28.2"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]

[lib]
name = "animations"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]
