[project]
name = "mess-animations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dearpygui>=2.2",
    "maturin>=1.13.1",
    "platformdirs>=4.9.6",
    "pyinstaller>=6.19.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"


[tool.maturin]
python-source = "mess"
module-name = "mess.animations"

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "rust/Cargo.toml"}, {file = "**/*.rs"}]
reinstall-package = ["animations"]
no-build-isolation-package = ["animations"]

